# Orange

./: .gitattributes  .gitignore  .gitmodules  README.md  build_vst_linux.sh  build_vst_mac.sh  build_vst_x64.bat  build_vst_x86.bat  build_vstsdk_linux.sh  build_vstsdk_mac.sh  build_vstsdk_x64.bat  build_vstsdk_x86.bat  init_linux.sh  init_x86.bat  premake5.lua  premake_linux.sh  premake_mac.sh  premake_win.bat
Orange/: CMakeLists.txt  Orange.lua
Orange/include/: plugin_info.h
Orange/mac/: Info.plist
Orange/src/: audioBuffer.h  audioTime.h  orange_entry.cpp  pinkNoiseGenerator.cpp  pinkNoiseGenerator.h  plugin_info.h  plugin_sample.cpp  plugin_sample.h  sawtoothGenerator.cpp  sawtoothGenerator.h  sineGenerator.cpp  sineGenerator.h  squareGenerator.cpp  squareGenerator.h  triangleGenerator.cpp  triangleGenerator.h  waveGenerator.cpp  waveGenerator.h  whiteNoiseGenerator.cpp  whiteNoiseGenerator.h
tools/cmake/linux/x86_64/doc/cmake/html/: searchindex.js
tools/cmake/linux/x86_64/man/man1/: ccmake.1
tools/cmake/mac/CMake.app/Contents/: CodeResources  Info.plist
tools/cmake/mac/CMake.app/Contents/Frameworks/QtPrintSupport.framework/Versions/5/: QtPrintSupport
tools/cmake/mac/CMake.app/Contents/_CodeSignature/: CodeResources
tools/cmake/mac/CMake.app/Contents/doc/cmake/html/: genindex.html  index.html  search.html
tools/cmake/mac/CMake.app/Contents/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  continue.html  (+107 more)
(+1584 files in other folders)
